# RAG_Doc_Assistant

./: .gitignore  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: LoadingDots.tsx  QuerySection.tsx  UploadSection.tsx
